# 5thPlanet

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.claude/skills/code-review/: SKILL.md
.claude/skills/commit-and-push/: SKILL.md
.claude/skills/docs-engineering/: SKILL.md
.claude/skills/dump-game-disc/: SKILL.md
.claude/skills/performance-profile/: SKILL.md
.claude/skills/release-engineering/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.claude/skills/tracing-thoroughly/: SKILL.md
bios/: README.md
crates/debugger/: Cargo.toml
crates/debugger/src/: m68k_disasm.rs  main.rs
crates/m68k/: Cargo.toml
crates/m68k/src/: bus.rs  harness.rs  interpreter.rs  isa.rs  lib.rs  regs.rs
crates/m68k/tests/: exceptions_timing.rs  isa_units.rs  opcodes.rs  ring_offset_repro.rs
crates/physdisc/: Cargo.toml
crates/physdisc/src/: lib.rs
crates/saturn/: Cargo.toml
crates/saturn/src/: bios_hle.rs  bus.rs  cartridge.rs  cd_block.rs  chd_image.rs  disc.rs  lib.rs  memory.rs  savestate.rs  scheduler.rs  scu.rs  smpc.rs  system.rs
crates/saturn/src/diagnostics/: asm.rs  mod.rs
crates/saturn/src/scsp/: dsp.rs  hle.rs  mod.rs
crates/saturn/src/vdp1/: command.rs  framebuffer.rs  mod.rs  plotter.rs  regs.rs  timing.rs  vram.rs
crates/saturn/src/vdp2/: cram.rs  mod.rs  regs.rs  renderer.rs  rotation.rs  vram.rs
crates/saturn/tests/: audio_pipeline.rs  bios_boot.rs  bus_routing.rs  cartridge.rs  cd_block.rs  chd.rs  diagnostics.rs  dual_sh2.rs  hle_boot.rs  homebrew_disc.rs  perf_split.rs  savestate.rs  scheduler.rs  scsp.rs  scu.rs  smpc.rs  system.rs  trace_boot.rs  vdp1.rs  vdp2_render.rs  vdp2_storage.rs
crates/saturn/tests/fixtures/: README.md  audiocd.chd
crates/saturn/tests/golden/: bios_splash.hash
crates/scu_dsp/: Cargo.toml
crates/scu_dsp/src/: decoder.rs  interpreter.rs  isa.rs  lib.rs  regs.rs
crates/scu_dsp/tests/: opcodes.rs
crates/sh2/: Cargo.toml
crates/sh2/src/: bus.rs  cache.rs  debug.rs  decoder.rs  exceptions.rs  harness.rs  interpreter.rs  isa.rs  lib.rs  pipeline.rs  regs.rs
crates/sh2/src/onchip/: bsc.rs  divu.rs  dmac.rs  frt.rs  intc.rs  mod.rs  sci.rs  ubc.rs  wdt.rs
crates/sh2/tests/: address_gen_interlock.rs  cache_wiring.rs  divu_timing.rs  dmac.rs  exceptions.rs  frt_timer.rs  interpreter_paths.rs  onchip_routing.rs  onchip_routing_misc.rs  opcodes_arith.rs  opcodes_basic.rs  opcodes_data.rs  opcodes_logical.rs  opcodes_shifts.rs  opcodes_system.rs  pipeline_timing.rs  rom_harness.rs
doc/: bios-bgm-diagnosis.md  boot-blocker-investigations.md  bootstrapping.md  compatible-game-titles.md  debugging-playbook.md  emulation-capabilities-evaluation.md  glossary.md  mame-divergence-review.md  mednafen-divergence-review.md  roadmap.md  system-architecture.md  wip-compatibility-titles.md
doc/adr/: 0001-record-architecture-decisions.md  0002-accuracy-over-performance.md  0003-bus-returns-stall-cycles.md  0004-deterministic-deadline-scheduler.md  0005-queue-and-drain-side-effects.md  0006-scu-dsp-standalone-crate.md  0007-forbid-unsafe-code.md  0008-frontend-osd-software-composite.md  0009-physdisc-libcdio-ffi-crate.md  0010-hle-direct-boot.md  0011-hle-bios-syscalls.md  0012-scsp-sound-driver-hle.md  0013-render-pipeline-worker-thread.md  0014-audio-paced-emulation-loop.md  0015-cd-block-hle.md  0016-master-leads-slave-cpu-stepping.md  0017-reference-oracle-policy.md  0018-save-state-design.md  0019-gpu-is-presentation-only.md  0020-migrate-sdl2-to-sdl3.md  0021-per-access-bsc-bus-timing.md  0022-event-driven-onchip-timers.md  0023-save-file-keying.md  0024-pgo-sanctioned-performance-lever.md  0025-scu-dma-no-cpu-halt.md  0026-cores-are-no-std-libraries.md  0027-golden-fingerprint-regression-guards.md  0028-backup-cartridge-virtual-cards.md  README.md  template.md
doc/screenshots/: README.md
fifth_planet/: Cargo.toml
fifth_planet/src/: main.rs
jupiter/: Cargo.toml  jupiter.toml.example
jupiter/src/: config.rs  main.rs  ports.rs  present.rs  present_gpu.rs  render_pipe.rs
jupiter/src/osd/: font.rs  mod.rs
jupiter/src/shaders/: README.md  crt.frag.glsl  crt.frag.spv  crt.vert.glsl  crt.vert.spv
roms/: README.md
shaders/: README.md
tests/disc/: .gitignore  Makefile  README.md
tests/disc/src/: main.c
tools/: dump_game_disc.sh  mame_lockstep.py  pc_lockstep.py  scope_diff.py
tools/pgo/: README.md  build_release.sh  run_pgo.sh
