[workspace]
resolver = "3"
members = [
    "crates/sh2",
    "crates/saturn",
    "crates/scu_dsp",
    "crates/m68k",
    "crates/physdisc",
    "crates/debugger",
    "jupiter",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Hui-Hong You"]
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"
