[package]
name = "saturn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sh2 = { path = "../sh2", features = ["serde"] }
scu_dsp = { path = "../scu_dsp", features = ["serde"] }
m68k = { path = "../m68k", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
bincode = { version = "2", features = ["serde"] }

[lints]
workspace = true
