[package]
name = "scu_dsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SEGA Saturn SCU-DSP — 32-bit vector DSP embedded in the SCU."

[dependencies]
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }
serde-big-array = { version = "0.5", optional = true }

[dev-dependencies]

[features]
# Opt-in Serialize/Deserialize on the DSP state types (used by the Saturn
# save-state machinery). Off by default so the core stays dependency-free.
serde = ["dep:serde", "dep:serde-big-array"]

[lints]
workspace = true
